# joypad-os

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile  NUON2USB_TASK.md  PRD.md  README.md  THIRD_PARTY_LICENSES  mkdocs.yml
.dev/docs/: universal-controller-app.md
.github/workflows/: build.yml  docs.yml  picousb2usb.yml  web-config.yml
docs/: HARDWARE.md  INSTALLATION.md  MOUTHPAD.md  USB_HOST_WIRING.md  index.md  nes-multitap-plan.md
docs/adapters/: 3do.md  NES2USB.md  bluetooth.md  dreamcast.md  gamecube.md  loopy.md  n64.md  native-input.md  neogeo.md  nuon.md  pcengine.md  usb.md
docs/apps/: bt2gc.md  bt2n64.md  bt2nuon.md  bt2usb.md  controllers.md  gc2usb.md  index.md  jvs2usb.md  lodgenet2usb.md  n642dc.md  n642nuon.md  n642usb.md  neogeo2usb.md  nes2usb.md  pce2usb.md  snes23do.md  snes2usb.md  usb23do.md  usb2dc.md  usb2gc.md  usb2loopy.md  usb2neogeo.md  usb2nuon.md  usb2pce.md  usb2uart.md  usb2usb.md  wifi2usb.md
docs/architecture/: layers.md  overview.md
docs/consoles/: 3DO.md  GAMECUBE.md  NEOGEO.md
docs/core/: buttons.md  index.md  leds.md  platform-hal.md  players.md  profiles.md  router.md  storage.md  web-config.md
docs/development/: index.md
docs/getting-started/: building.md  installation.md
docs/hardware/: controllers.md  diy.md  wiring.md
docs/hardware/builds/: bt2usb-pico-w.md  lodgenet2usb-pico.md  n642dc-kb2040.md  snes2usb-kb2040.md  usb2gc-kb2040.md  usb2gc.md
docs/input/: bluetooth.md  gamecube.md  gpio.md  index.md  jvs.md  lodgenet.md  n64.md  neogeo.md  nes.md  pcengine.md  snes.md  uart.md  usb-hid.md  wifi-jocp.md  xinput.md
docs/output/: 3do.md  dreamcast.md  gamecube.md  index.md  loopy.md  n64.md  neogeo.md  nuon.md  pcengine.md  uart.md  usb-device.md
docs/overview/: architecture.md  data-flow.md  glossary.md
docs/protocols/: 3DO_PBUS.md  GAMECUBE_JOYBUS.md  NUON_POLYFACE.md  PCENGINE.md  jvs.md  lodgenet.md  sinput.md
docs/retrofrog/usb4ami/: user_guide.md
esp/: partitions_lilygo_16mb.csv  sdkconfig.board.lilygo_tdisplay_s3_amoled
esp/main/: CMakeLists.txt  battery_esp32.c  btstack_host_nus_stub.c  display_i2c_esp32.c  eyes_esp32.c  flash_esp32.c  main.c  pad_config_storage_esp32.c  pad_input_stub.c  platform_gpio_esp32.c  pmu_esp32.c  ps4_auth_stubs.c  rm67162_amoled.c  rm67162_amoled.h
nrf/: CMakeLists.txt  Makefile  prj.conf  prj_controller_btusb.conf  prj_mouthpad.conf
nrf/boards/: adafruit_feather_nrf52840.conf  aprbrother_nrf52840.conf  aprbrother_nrf52840.overlay  xiao_ble.overlay
nrf/src/: button_nrf.c  display_i2c_nrf.c  flash_nrf.c  imu_nrf.c  imu_nrf.h  main.c  pad_config_storage_nrf.c  platform_gpio_nrf.c  ps4_auth_stubs.c  tusb_config_nrf.h  ws2812_nrf.c
src/: CMakeLists.txt  main.c  tusb_config.h
src/apps/bt2gc/: app.c  app.h
src/apps/bt2loopy/: app.c  app.h  profiles.h
src/apps/bt2n64/: app.c  app.h  profiles.h
src/apps/bt2nuon/: README.md  app.c  app.h
src/apps/bt2usb/: app.c  app.h
src/apps/bt2wii/: app.c  app.h
src/apps/bt2wiiext/: app.c  app.h
src/apps/controller/: app.c  app.h
src/apps/controller_btusb/: app.c  app.h
src/apps/gc2dc/: app.c  app.h
src/apps/gc2eth/: app.c  app.h
src/apps/gc2eth_feather/: app.c  app_config.h
src/apps/gc2usb/: app.c  app.h  profiles.h
src/apps/jag2usb/: app.c  app.h  app_config.h  profiles.h
src/apps/jvs2usb/: app.c  app.h
src/apps/lodgenet2gc/: app.c  app.h
src/apps/lodgenet2n64/: app.c  app.h
src/apps/lodgenet2usb/: app.c  app.h  app_config.h
src/apps/mouthpad/: app.c  app.h  joypad_gamepad.mkprofile
src/apps/n642dc/: app.c  app.h  app_config.h
src/apps/n642nuon/: app.c  app.h
src/apps/n642usb/: app.c  app.h
src/apps/neogeo2usb/: app.c  app.h
src/boards/: build_hhl_gc_pocket.sh  build_pico2.sh
src/core/: battery.h  buttons.h  input_event.h  output_interface.h
src/h/: mbedtls_config.h
src/lib/libjoypad/: CMakeLists.txt  README.md
src/lib/libjoypad/examples/minimal-c/: CMakeLists.txt  README.md  main.c
src/lib/libjoypad/examples/unity/: README.md
src/lib/libjoypad/examples/unreal/: JoypadInput.uplugin  README.md
src/lib/libjoypad/examples/unreal/Source/JoypadInput/: JoypadInput.Build.cs
src/lib/libjoypad/examples/unreal/Source/JoypadInput/Private/: FJoypadInputDevice.cpp  FJoypadInputDevice.h  JoypadInputModule.cpp  libjoypad_unity.c
src/lib/libjoypad/examples/unreal/Source/JoypadInput/Public/: JoypadInputModule.h
src/lib/libjoypad/examples/web/: README.md  app.js  build.sh  index.html  wasm_bridge.c
src/lib/libjoypad/include/joypad/: buttons.h  capabilities.h  feedback.h  input_event.h  layouts.h
src/lib/libjoypad/include/joypad/devices/microsoft/: xinput.h
src/lib/libjoypad/include/joypad/devices/nintendo/: switch_pro.h
src/lib/libjoypad/include/joypad/devices/sony/: ds3.h  ds4.h  ds5.h  psc.h
src/lib/libjoypad/src/devices/usb/hid/nintendo/: switch_pro.c
src/lib/libjoypad/src/devices/usb/hid/sony/: ds3.c  ds4.c  ds5.c  psc.c
src/lib/libjoypad/src/devices/usb/xinput/: xinput.c
src/lib/libjoypad/tests/: README.md
src/lib/libjoypad/tests/fixtures/sony_ds5/: README.md
src/lib/libjoypad/tests/replay/: ds3_input.c  ds4_input.c  ds5_fixture_replay.c  ds5_input.c  psc_input.c  smoke.c  switch_pro_input.c  xinput_input.c
src/lib/libjoypad/tools/: capture_ds5_fixtures.py
src/pad/: pad_config_flash.c  pad_config_flash.h  pad_config_storage.h  pad_config_storage_rp2040.c  pad_input.c  pad_input.h
src/platform/: platform.h  platform_gpio.h  platform_sd.h
tests/: test_invariant_display_i2c_nrf.c
tools/: ble-ota.html  cdc_test.py  joypad-ble.py  log_monitor.py  mp_relay_probe.py
tools/ds5-companion/: bridge.py
tools/ds5-scream/: encode.py  make_astro_placeholders.sh  make_fisher.sh  make_placeholders.sh  make_robot.sh  make_show.py
tools/jocp-test-client/: README.md  package-lock.json  package.json  server.js
tools/joypad-mcp/: .gitignore  package-lock.json  package.json
tools/nusprobe/: .gitignore  Info.plist  README.md  build.sh  main.swift  nus_cmd.py
tools/web-config/: app.js  cdc-protocol.js  index.html
wch/src/: flash_wch.c
(+386 files in other folders)
